--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <H1></H1>
 <H2>This homepage can be opened on almost every existing web-browsers!</H2>
 <H4>Tested NCSA Mosaic, NetScape, Internet Explorer, Mozila, Chromium, Safari, elinks, lynx and more!</H4>
-<H5>Homepage running on DotHome free hosting</H5>
+<H5>Homepage running on Github Pages</H5>
 
 <H1>Homepage Menus</H1>
 
@@ -20,6 +20,6 @@
 
 <HR>
 
-<H5>This page is last updated in July 10, 2020 (UTC+9)</H5>
+<H5>This page is last updated in July 29, 2020</H5>
 <H5>Made by HexagonWin, baickainetwork@gmail.com</H5>
 <A HREF="mailto:baickainetwork@gmail.com"><I>Mail right now!</I></A><BR>
