--- a/index.html
+++ b/index.html
@@ -23,3 +23,5 @@
 <H5>This page is last updated in July 29, 2020</H5>
 <H5>Made by HexagonWin, baickainetwork@gmail.com</H5>
 <A HREF="mailto:baickainetwork@gmail.com"><I>Mail right now!</I></A><BR>
+
+ <!--gwa. https://drive.google.com/file/d/1KM79qHBroApySzLvEg88FmmP89STHnHm/view?usp=sharing -->
