--- a/cdi/index.html
+++ b/cdi/index.html
@@ -1,13 +1,44 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Creative Academy</title>
-</head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Creative Academy</title>
+<style>
+.topnav {
+  overflow: hidden;
+  background-color: #000000;
+}
 
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #FFFFFF;
+  color: black;
+}
+</style>
+</head>
 <body>
-<p strong>Welcome to * creative academy! | <a href="#">[ Home ]</a> <a href="#">[ Our Program</a> <a href="#">[ Sign Up / Log in ]</a>
-<hr>
-<center><H2>*Creative Academy!</H2></center>
-<center><p size=1 strong>We Care Students</p></center>
+
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">Register</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+  <a href="#about">Visit</a>
+</div>
+
 
 </body>
 </html>
