--- a/cdi/index.html
+++ b/cdi/index.html
@@ -39,6 +39,9 @@
   <a href="#about">Visit</a>
 </div>
 
+  <center><H2>Super Academy</H2></center>
+  <center><p size=1 strong>Some blahblah murmurs...</p></center>
+  
 
 </body>
 </html>
