--- a/cdi/index.html
+++ b/cdi/index.html
@@ -32,7 +32,7 @@
         {
             width: 800px;
             height: 400px;
-            background-color: yellow;
+            background-color: black;
             margin-left: auto;
             margin-right: auto;
             margin-top: 0px;
@@ -43,7 +43,7 @@
         .image-holder
         {
             width: 2400px;
-            background-color: red;
+            background-color: black;
             height: 400px;
             clear: both;
             position: relative;
@@ -89,7 +89,7 @@
             height: 10px;
             width: 10px;
             border-radius: 5px;
-            background-color: brown;
+            background-color: black;
         }
 </style>
 </head>
@@ -111,9 +111,9 @@
         <span id="slider-image-2"></span>
         <span id="slider-image-3"></span>
         <div class="image-holder">
-            <img src="1.jpg" class="slider-image" />
-            <img src="2.jpg" class="slider-image" />
-            <img src="3.jpg" class="slider-image" />
+            <img src="https://cdn.discordapp.com/attachments/781417817899270167/791596719019786300/unknown.png" class="slider-image" />
+            <img src="https://cdn.discordapp.com/attachments/781417817899270167/791597140769636352/unknown.png" class="slider-image" />
+            <img src="https://cdn.discordapp.com/attachments/781417817899270167/791597452045189140/unknown.png" class="slider-image" />
         </div>
         <div class="button-holder">
             <a href="#slider-image-1" class="slider-change"></a>
