--- a/cdi/index.html
+++ b/cdi/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Creative Academy</title>
+  <title>RJR Soccers - Register Today!</title>
 <style>
 .topnav {
   overflow: hidden;
@@ -103,8 +103,7 @@
   <a href="#about">Visit</a>
 </div>
 
-  <center><H1>Super Academy</H1></center>
-  <center><p size=1 strong>Some blahblah murmurs...</p></center>
+  <center><IMG src="https://cdn.discordapp.com/attachments/781417817899270167/791599427256713226/unknown.png" alt="rjr soccers"></center>
   
   <div class="slider-holder">
         <span id="slider-image-1"></span>
