--- a/cdi/index.html
+++ b/cdi/index.html
@@ -102,8 +102,6 @@
   <a href="#about">About</a>
   <a href="#about">Visit</a>
 </div>
-
-  <center><IMG src="https://cdn.discordapp.com/attachments/781417817899270167/791600031466782791/unknown.png" alt="rjr soccers"></center>
   
   <div class="slider-holder">
         <span id="slider-image-1"></span>
@@ -121,6 +119,30 @@
         </div>
     </div>
   
+<hr>
+  <center><H1>Why <p strong>RJR</p>?</H1></center>
 
+  <table border="" cellpadding="1" cellspacing="1">
+	<tbody>
+		<tr>
+			<td><img src="https://lh3.googleusercontent.com/hf6Qvt2iJlLnSGyy62rifQDSMrsFs4C7jJfxuBZYvK06QMTDSrIlfZKRG3I0KCJAICh63m3ukDBRnHbCoDpF94d6J0ocJIhfqmSm54X5z_ntyO5HYTtCj6cFJnRk5-FJ-GBn7y0p-Yk"></td>
+			<td><img src="https://lh3.googleusercontent.com/hTKAQcwvP6emJSyapldAwboPl32dn-B_rEkDEj1LZg0RdXaj6fp2v-hVIl2mTF3IIjliDKLjPG3BmnuU8NT9Z8YB3fmQ5TAiGpCDS4Z879Rkwqxb04_tPrdw8_xnsuYckQdPg5mr3ts"></td>
+			<td><img src="https://lh3.googleusercontent.com/7kwLrMZn8jLJPYRpYZyvupvFbnU-U-DPKVnErXcO-sPFw5wm7cnTHdlqJus62Qw74iRmEbOvdcsacRsYWf6sVbJK5hRN3gDpzylwBJGyX-Ij3KuCOSQrtzmLK69lgvzjFH0k9_UR4ZI"></td>
+			<td><img src="https://lh5.googleusercontent.com/EMunyMIXb_L0luOdvDyoxoi0vw_WRGLgV8gz94ma02-e5n8c2pLW9eTVOcGq3hiGUeCPSfdGf5IotUHmA7v-Mq0yFSsrXhBvrItAYXkjupJiCSyUOHtu412z8iAHW3luMXWab3jeDME"></td>
+			<td><img src="https://lh5.googleusercontent.com/zLCS6JkG0qKz29bdJWB3qCY8NlTsPj3dPal-zzk7x6NItApPC4G0yVHNWMHKn6wSOuRd9jf55cDeW0pMgG0CRY8MxyN_2M8Na-8GQRTSVyCK-qSHukW_gZR_9a8Phg1R_Y9d-0zIr_M"></td>
+			<td><img src="https://lh3.googleusercontent.com/_VdN14meNibUEdGwWGcRCI2dFrmZRz4eCr1D1cO3sUypDYWZ2gV7cuLqWksQCStdIBWmPUROdqgKlUhfYMPRaRb31wuGRgPKDuSX19fJ5p2kfdz-j8vzRynZpfEuEQ4P0sQWZOCK5vE"></td>
+		</tr>
+		<tr>
+			<td>Physical Excercise</td>
+			<td>Lobbing Pass</td>
+			<td>Lifting</td>
+			<td>Running</td>
+			<td>Catching Balls</td>
+			<td>Sportsmanship</td>
+		</tr>
+	</tbody>
+</table>
+
+  
 </body>
 </html>
