--- a/cdi/index.html
+++ b/cdi/index.html
@@ -122,7 +122,7 @@
 <hr>
   <center><H1>Why <p strong>RJR</p>?</H1></center>
 
-  <table border="" cellpadding="1" cellspacing="1">
+  <table border="" cellpadding="1" cellspacing="1" style="width:1000px;" style="height:350px;">
 	<tbody>
 		<tr>
 			<td><img src="https://lh3.googleusercontent.com/hf6Qvt2iJlLnSGyy62rifQDSMrsFs4C7jJfxuBZYvK06QMTDSrIlfZKRG3I0KCJAICh63m3ukDBRnHbCoDpF94d6J0ocJIhfqmSm54X5z_ntyO5HYTtCj6cFJnRk5-FJ-GBn7y0p-Yk"></td>
