--- a/cdi/index.html
+++ b/cdi/index.html
@@ -122,15 +122,15 @@
 <hr>
   <center><H1>Why <p strong>RJR</p>?</H1></center>
 
-  <table border="" cellpadding="1" cellspacing="1" style="width:1000px;" style="height:350px;">
+<table border="1" cellpadding="1" cellspacing="1" style="width:800px;">
 	<tbody>
 		<tr>
-			<td><img src="https://lh3.googleusercontent.com/hf6Qvt2iJlLnSGyy62rifQDSMrsFs4C7jJfxuBZYvK06QMTDSrIlfZKRG3I0KCJAICh63m3ukDBRnHbCoDpF94d6J0ocJIhfqmSm54X5z_ntyO5HYTtCj6cFJnRk5-FJ-GBn7y0p-Yk"></td>
-			<td><img src="https://lh3.googleusercontent.com/hTKAQcwvP6emJSyapldAwboPl32dn-B_rEkDEj1LZg0RdXaj6fp2v-hVIl2mTF3IIjliDKLjPG3BmnuU8NT9Z8YB3fmQ5TAiGpCDS4Z879Rkwqxb04_tPrdw8_xnsuYckQdPg5mr3ts"></td>
-			<td><img src="https://lh3.googleusercontent.com/7kwLrMZn8jLJPYRpYZyvupvFbnU-U-DPKVnErXcO-sPFw5wm7cnTHdlqJus62Qw74iRmEbOvdcsacRsYWf6sVbJK5hRN3gDpzylwBJGyX-Ij3KuCOSQrtzmLK69lgvzjFH0k9_UR4ZI"></td>
-			<td><img src="https://lh5.googleusercontent.com/EMunyMIXb_L0luOdvDyoxoi0vw_WRGLgV8gz94ma02-e5n8c2pLW9eTVOcGq3hiGUeCPSfdGf5IotUHmA7v-Mq0yFSsrXhBvrItAYXkjupJiCSyUOHtu412z8iAHW3luMXWab3jeDME"></td>
-			<td><img src="https://lh5.googleusercontent.com/zLCS6JkG0qKz29bdJWB3qCY8NlTsPj3dPal-zzk7x6NItApPC4G0yVHNWMHKn6wSOuRd9jf55cDeW0pMgG0CRY8MxyN_2M8Na-8GQRTSVyCK-qSHukW_gZR_9a8Phg1R_Y9d-0zIr_M"></td>
-			<td><img src="https://lh3.googleusercontent.com/_VdN14meNibUEdGwWGcRCI2dFrmZRz4eCr1D1cO3sUypDYWZ2gV7cuLqWksQCStdIBWmPUROdqgKlUhfYMPRaRb31wuGRgPKDuSX19fJ5p2kfdz-j8vzRynZpfEuEQ4P0sQWZOCK5vE"></td>
+			<td><meta charset="utf-8" /><b id="docs-internal-guid-f67a0244-7fff-9bd5-d3bb-0e3792654aad"><img height="107px;" src="https://lh3.googleusercontent.com/hf6Qvt2iJlLnSGyy62rifQDSMrsFs4C7jJfxuBZYvK06QMTDSrIlfZKRG3I0KCJAICh63m3ukDBRnHbCoDpF94d6J0ocJIhfqmSm54X5z_ntyO5HYTtCj6cFJnRk5-FJ-GBn7y0p-Yk" width="190px;" /></b></td>
+			<td><meta charset="utf-8" /><b id="docs-internal-guid-57069acc-7fff-9295-cd74-4bba7815ce73"><img height="134px;" src="https://lh3.googleusercontent.com/hTKAQcwvP6emJSyapldAwboPl32dn-B_rEkDEj1LZg0RdXaj6fp2v-hVIl2mTF3IIjliDKLjPG3BmnuU8NT9Z8YB3fmQ5TAiGpCDS4Z879Rkwqxb04_tPrdw8_xnsuYckQdPg5mr3ts" width="190px;" /></b></td>
+			<td><meta charset="utf-8" /><b id="docs-internal-guid-fbbc4c69-7fff-b6c7-0abe-bcb3f8f8f333"><img alt="6 Academy Alumni Ranked in the Top-50 - Dirty South Soccer" height="134px;" src="https://lh3.googleusercontent.com/7kwLrMZn8jLJPYRpYZyvupvFbnU-U-DPKVnErXcO-sPFw5wm7cnTHdlqJus62Qw74iRmEbOvdcsacRsYWf6sVbJK5hRN3gDpzylwBJGyX-Ij3KuCOSQrtzmLK69lgvzjFH0k9_UR4ZI" width="226px;" /></b></td>
+			<td><meta charset="utf-8" /><b id="docs-internal-guid-654c2f31-7fff-fa5c-0820-ae26f04d644e"><img alt="Football soccer player running design - Download Free Vectors, Clipart  Graphics &amp; Vector Art" height="225px;" src="https://lh5.googleusercontent.com/EMunyMIXb_L0luOdvDyoxoi0vw_WRGLgV8gz94ma02-e5n8c2pLW9eTVOcGq3hiGUeCPSfdGf5IotUHmA7v-Mq0yFSsrXhBvrItAYXkjupJiCSyUOHtu412z8iAHW3luMXWab3jeDME" width="226px;" /></b></td>
+			<td><meta charset="utf-8" /><b id="docs-internal-guid-7f98ba5f-7fff-16fb-bf89-c08ea243aae6"><img height="245px;" src="https://lh5.googleusercontent.com/zLCS6JkG0qKz29bdJWB3qCY8NlTsPj3dPal-zzk7x6NItApPC4G0yVHNWMHKn6wSOuRd9jf55cDeW0pMgG0CRY8MxyN_2M8Na-8GQRTSVyCK-qSHukW_gZR_9a8Phg1R_Y9d-0zIr_M" width="321px;" /></b></td>
+			<td><meta charset="utf-8" /><b id="docs-internal-guid-b2393ef2-7fff-ac6e-7aef-0aae426a2eda"><img height="117px;" src="https://lh3.googleusercontent.com/_VdN14meNibUEdGwWGcRCI2dFrmZRz4eCr1D1cO3sUypDYWZ2gV7cuLqWksQCStdIBWmPUROdqgKlUhfYMPRaRb31wuGRgPKDuSX19fJ5p2kfdz-j8vzRynZpfEuEQ4P0sQWZOCK5vE" width="190px;" /></b></td>
 		</tr>
 		<tr>
 			<td>Physical Excercise</td>
@@ -142,6 +142,9 @@
 		</tr>
 	</tbody>
 </table>
+
+<p>&nbsp;</p>
+
 
   
 </body>
