--- a/cdi/index.html
+++ b/cdi/index.html
@@ -120,10 +120,12 @@
     </div>
   
 <hr>
-  <center><H1>Why <p strong>RJR</p>?</H1></center>
-
+<center>
 <table border="1" cellpadding="1" cellspacing="1" style="width:800px;">
 	<tbody>
+		<tr>
+			<H1>Why RJR?</H1>
+		</tr>
 		<tr>
 			<td><meta charset="utf-8" /><b id="docs-internal-guid-f67a0244-7fff-9bd5-d3bb-0e3792654aad"><img height="107px;" src="https://lh3.googleusercontent.com/hf6Qvt2iJlLnSGyy62rifQDSMrsFs4C7jJfxuBZYvK06QMTDSrIlfZKRG3I0KCJAICh63m3ukDBRnHbCoDpF94d6J0ocJIhfqmSm54X5z_ntyO5HYTtCj6cFJnRk5-FJ-GBn7y0p-Yk" width="190px;" /></b></td>
 			<td><meta charset="utf-8" /><b id="docs-internal-guid-57069acc-7fff-9295-cd74-4bba7815ce73"><img height="134px;" src="https://lh3.googleusercontent.com/hTKAQcwvP6emJSyapldAwboPl32dn-B_rEkDEj1LZg0RdXaj6fp2v-hVIl2mTF3IIjliDKLjPG3BmnuU8NT9Z8YB3fmQ5TAiGpCDS4Z879Rkwqxb04_tPrdw8_xnsuYckQdPg5mr3ts" width="190px;" /></b></td>
@@ -142,8 +144,8 @@
 		</tr>
 	</tbody>
 </table>
+	</center>
 
-<p>&nbsp;</p>
 
 
   
