--- a/cdi/index.html
+++ b/cdi/index.html
@@ -135,12 +135,12 @@
 			<td><meta charset="utf-8" /><b id="docs-internal-guid-b2393ef2-7fff-ac6e-7aef-0aae426a2eda"><img height="117px;" src="https://lh3.googleusercontent.com/_VdN14meNibUEdGwWGcRCI2dFrmZRz4eCr1D1cO3sUypDYWZ2gV7cuLqWksQCStdIBWmPUROdqgKlUhfYMPRaRb31wuGRgPKDuSX19fJ5p2kfdz-j8vzRynZpfEuEQ4P0sQWZOCK5vE" width="190px;" /></b></td>
 		</tr>
 		<tr>
-			<td>Physical Excercise</td>
-			<td>Lobbing Pass</td>
-			<td>Lifting</td>
-			<td>Running</td>
-			<td>Catching Balls</td>
-			<td>Sportsmanship</td>
+			<td><center><p strong>Physical Excercise</p></center></td>
+			<td><center><p strong>Lobbing Pass</p></center></td>
+			<td><center><p strong>Lifting</p></center></td>
+			<td><center><p strong>Running</p></center></td>
+			<td><center><p strong>Catching Balls</p></center></td>
+			<td><center><p strong>Sportsmanship</p></center></td>
 		</tr>
 	</tbody>
 </table>
