--- a/cdi/index.html
+++ b/cdi/index.html
@@ -121,7 +121,7 @@
   
 <hr>
 <center>
-<table border="1" cellpadding="1" cellspacing="1" style="width:800px;">
+<table border="1" cellspacing="0" cellpadding="0" style="width:800px;">
 	<tbody>
 		<tr>
 			<H1>Why RJR?</H1>
