--- a/cdi/index.html
+++ b/cdi/index.html
@@ -121,7 +121,7 @@
   
 <hr>
 <center>
-<table border="0" cellspacing="0" cellpadding="0" style="width:800px;">
+<table border="1" cellspacing="0" cellpadding="0" style="width:800px;">
 	<tbody>
 		<tr>
 			<H1>Why RJR?</H1>
@@ -148,6 +148,8 @@
 
 
 
-  
+<hr>
+	<center><p>&copy 2020 Ryan / Joowan / Richard Soccer All rights and lefts <p strong>not</p> reserved</p></center>
+	<center><p>The following website is made for fun and all the informations contained, except this and the text above is fake.</p></center>
 </body>
 </html>
