--- a/cdi/index.html
+++ b/cdi/index.html
@@ -149,7 +149,7 @@
 
 
 <hr>
-	<center><p>&copy 2020 Ryan / Joowan / Richard Soccer All rights and lefts <p strong>not</p> reserved</p></center>
-	<center><p>The following website is made for fun and all the informations contained, except this and the text above is fake.</p></center>
+	<center>&copy 2020 Ryan / Joowan / Richard Soccer All rights and lefts <p strong>not</p> reserved</center>
+	<center>The following website is made for fun and all the informations contained, except this and the text above is fake.</center>
 </body>
 </html>
