--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
 
 <H1>About this homepage</H1>
 <H3>This homepage is @HexagonWin's personal homepage.</H3>
-<H3>This is the main server he is using, and he also has another Pentium III Server.</H3>
-<H3>This homepage's goal is to make a homepage that can be viewed on all the webbrowsers that exist.</H3>
-<H3>This page is built with HTML 2.0 technology. Thank you. </H3>
+  <H3>This homepage is ran in Github Pages.</H3>
+  <H3>If you found anything strange, plz email me</H3>
+  <H3>This website is only in basic html, so if u want more info, visit the main site in <a href="http://archve.ga>archve.ga.</a>
 
 <UL>
 <LI><A HREF=index.html>Main Page</A>
@@ -18,6 +18,6 @@
 
 <HR>
 
-<H5>This page is last updated in July 10, 2020 (UTC+9)</H5>
+<H5>This page is last updated in Jan 8, 2021 (UTC+9)</H5>
 <H5>Made by HexagonWin, baickainetwork@gmail.com</H5>
 <A HREF="mailto:baickainetwork@gmail.com"><I>Mail right now!</I></A><BR>
